# Finetune-lora-dpo

./: .env.example  .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml  requirements-ci.txt  requirements-dev.txt  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml
.streamlit/: config.toml
data/samples/: function_schemas.json
experiments/: results.json
scripts/: demo.py  download_data.py  evaluate.py  train_dpo.py  train_sft.py
src/: __init__.py
src/config/: training_config.py
src/data/: formatter.py  loader.py  preference_builder.py
src/evaluation/: evaluator.py  metrics.py
src/inference/: pipeline.py
src/model/: loader.py  lora_config.py
src/training/: dpo_trainer.py  sft_trainer.py
tests/: test_formatter.py  test_metrics.py  test_preference_builder.py
